--- a/css/footer.css
+++ b/css/footer.css
@@ -7,7 +7,25 @@ footer {
     padding: 10px;
     text-align: center;
     align-content: center;
-    font-size: 20px;
+    font-size: 1.5em;
     position: fixed;
     bottom: 0;
+}
+
+@media screen and (max-width: 1440px) {
+    footer{
+        font-size: 1.3em;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    footer{
+        font-size: 1em;
+    }
+}
+
+@media screen and (max-width: 660px) {
+    footer{
+        font-size: 1em;
+    }
 }
