--- a/css/header.css
+++ b/css/header.css
@@ -13,6 +13,11 @@
     align-items: center;
 }
 
+.logo img{
+    width: 5em;
+    height: 5em;
+}
+
 .form{
     display: flex;
     align-items: center;
@@ -35,4 +40,35 @@
     font-weight: bold;
     text-transform: uppercase;
     letter-spacing: 3px;
+}
+
+@media screen and (max-width: 1440px) {
+    .contenedor__form {
+        font-size: .9em;
+        padding: 1em;
+    }
+}
+
+@media screen and (max-width: 850px) {
+    .contenedor__form {
+        font-size: .8em;
+    }
+    .pokedex-title {
+        font-size: 2em;
+    }
+    .logo img{
+        width: 4em;
+        height: 4em;
+    }
+}
+
+@media screen and (max-width: 660px) {
+    .contenedor__form {
+        font-size: .6em;
+        flex-direction: column;
+    }
+    .logo img{
+        width: 3em;
+        height: 3em;
+    }
 }
